--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<h2><strong>The brain cubinder</strong></h2>
+					<h2><strong>The brain cubinder aaa</strong></h2>
 					<h1>A topological manifold to support causal conectivity<br /></h1>
 				</div>
 			</header>
