--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<h2>Manifold views</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<iframe  frameborder="0" scrolling="no" src="//plotly.com/~rochasolache/50.embed"></iframe>
+								<iframe width="900" height="800" frameborder="0" scrolling="no" src="//plotly.com/~rochasolache/50.embed"></iframe>
 		
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
