--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<iframe id="ikgraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plotly.com/~chris/1638.embed" height="525" width="100%"></iframe>
+								<iframe width="550" height="500" frameborder="0" scrolling="no" src="//plotly.com/~rochasolache/50.embed"></iframe>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
