seccion causal cubinder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 					</section>
 					<!-- Two -->
 					<section id="two">
-						<h2>Manifold views</h2>
+						<h2>The causal cubinder</h2>
+						<p>The loretzian cubinder can be understood as an extruction of a 3d cylinder to a extra linear dimension.
+						    Below, you can explore 3D views of our 4D space.
+						</p>
+					
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<iframe width="450" height="400" frameborder="0" scrolling="no" src="//plotly.com/~rochasolache/50.embed"></iframe>
